--- a/index.html
+++ b/index.html
@@ -1,19 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>My Resume</title>
+    <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+  <body>
+    <div class="container">
+      <header>
+        <nav>
+          <a href='index.html' class='home-link' id='custom-link-style'>Home</a>
+          <a href='#'>About</a>
+          <a href='#'>Portfolio</a>
+          <a href='#'>Contact</a>
+        </nav>
+      </header>
+      <div class='personal-info'>
+        <img class="profile-picture" src="ProfilePicture.jpg" />
+        <h1 class="name">Jordin Kolman - Web Developer</h1>
+        <h2 class="tagline">Perfect Webites Every Time</h2>
+        <p class="summary">
+          I strive to create websites that exceed every standard set. For
+          freelance inquiries, contact me with the link below.
+        </p>
+        <button class="hire-me">Hire Me</button>
+      </div>
+      <div class="main-content">
+        <div class="about-me">
+          <h2 class="about-header">Who I Am:</h2>
+          <p class="about-content">
+            I am a student of Web Development at Lambda School. As I hone my
+            skills into becoming a top web developer, I am seeking freelance
+            opportunities to help companies like yours build their perfect
+            website. Whether you are looking for something from a template or a
+            custom-made website from scratch, you can count on me to deliver the
+            best website you could ask for. What I lack in experience, I make up
+            for in knowledge, skill, dedication, and drive. Send me a message
+            today with your needs and we can get started in making your web
+            presence dream a reality.
+          </p>
+          <h2 class="my-skills">My Skills:</h2>
+          <ul class="skills-list">
+            <li>Full Stack Web Coding</li>
+            <li>Front-End and Back-End Design</li>
+            <li>Problem Solving</li>
+            <li>Leadership</li>
+            <li>Balancing Multiple Projects</li>
+          </ul>
+        </div>
+        <div class="work-history">
+          <div class="table-line table-header">
+            <span>Yrs</span>
+            <span>Company</span>
+            <span>Title</span>
+            <span>Dates</span>
+          </div>
+          <div class="table-line table-one">
+            <span>3</span>
+            <span>Uber</span>
+            <span>Driver</span>
+            <span>11/2015-Present</span>
+          </div>
+          <div class="table-line table-two">
+            <span>1</span>
+            <span>Brinks</span>
+            <span>Armed Security Courier</span>
+            <span>08/2017-09/2018</span>
+          </div>
+          <div class="table-line table-three">
+            <span>2</span>
+            <span>United States Navy</span>
+            <span>MM(N)3 Nuclear Machinist Mate 3rd Class</span>
+            <span>02/2015-5/2017</span>
+          </div>
+        </div>
+      </div>
+      <footer class='copyright'>
+        <p>Copyright Kolman Tech Solutions 2019</p>
+      </footer>
+    </div>
+  </body>
 </html>
