completed LESS and CSS design

--- a/index.html
+++ b/index.html
@@ -17,73 +17,90 @@
     <div class="container">
       <header>
         <nav>
-          <a href='index.html' class='home-link' id='custom-link-style'>Home</a>
-          <a href='#'>About</a>
-          <a href='#'>Portfolio</a>
-          <a href='#'>Contact</a>
+          <a href="index.html" class="home-link" id="custom-link-style">Home</a>
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
         </nav>
       </header>
-      <div class='personal-info'>
-        <img class="profile-picture" src="ProfilePicture.jpg" />
-        <h1 class="name">Jordin Kolman - Web Developer</h1>
-        <h2 class="tagline">Perfect Webites Every Time</h2>
-        <p class="summary">
+      <div class="personal-info">
+        <img
+          class="profile-picture personal-content"
+          src="ProfilePicture.jpg"
+        />
+        <h1 class="name personal-content">Jordin Kolman - Web Developer</h1>
+        <h2 class="tagline personal-content">Perfect Webites Every Time</h2>
+        <p class="summary personal-content">
           I strive to create websites that exceed every standard set. For
           freelance inquiries, contact me with the link below.
         </p>
-        <button class="hire-me">Hire Me</button>
+        <button class="hire-me personal-content">Hire Me</button>
       </div>
       <div class="main-content">
-        <div class="about-me">
-          <h2 class="about-header">Who I Am:</h2>
-          <p class="about-content">
-            I am a student of Web Development at Lambda School. As I hone my
-            skills into becoming a top web developer, I am seeking freelance
-            opportunities to help companies like yours build their perfect
-            website. Whether you are looking for something from a template or a
-            custom-made website from scratch, you can count on me to deliver the
-            best website you could ask for. What I lack in experience, I make up
-            for in knowledge, skill, dedication, and drive. Send me a message
-            today with your needs and we can get started in making your web
-            presence dream a reality.
-          </p>
-          <h2 class="my-skills">My Skills:</h2>
-          <ul class="skills-list">
-            <li>Full Stack Web Coding</li>
-            <li>Front-End and Back-End Design</li>
-            <li>Problem Solving</li>
-            <li>Leadership</li>
-            <li>Balancing Multiple Projects</li>
-          </ul>
+        <div class="bottom-content">
+          <div class="about-me">
+            <h2 class="about-header">Who I Am:</h2>
+            <p class="about-content">
+              I am a student of Web Development at Lambda School. As I hone my
+              skills into becoming a top web developer, I am seeking freelance
+              opportunities to help companies like yours build their perfect
+              website. Whether you are looking for something from a template or
+              a custom-made website from scratch, you can count on me to deliver
+              the best website you could ask for. What I lack in experience, I
+              make up for in knowledge, skill, dedication, and drive. Send me a
+              message today with your needs and we can get started in making
+              your web presence dream a reality.
+            </p>
+          </div>
+          <div class="skill-section">
+            <h2 class="my-skills">My Skills:</h2>
+            <ul class="skills-list">
+              <li>Full Stack Web Coding</li>
+              <li>Front-End and Back-End Design</li>
+              <li>Problem Solving</li>
+              <li>Leadership</li>
+              <li>Balancing Multiple Projects</li>
+            </ul>
+          </div>
         </div>
         <div class="work-history">
-          <div class="table-line table-header">
-            <span>Yrs</span>
-            <span>Company</span>
-            <span>Title</span>
-            <span>Dates</span>
-          </div>
-          <div class="table-line table-one">
-            <span>3</span>
-            <span>Uber</span>
-            <span>Driver</span>
-            <span>11/2015-Present</span>
-          </div>
-          <div class="table-line table-two">
-            <span>1</span>
-            <span>Brinks</span>
-            <span>Armed Security Courier</span>
-            <span>08/2017-09/2018</span>
-          </div>
-          <div class="table-line table-three">
-            <span>2</span>
-            <span>United States Navy</span>
-            <span>MM(N)3 Nuclear Machinist Mate 3rd Class</span>
-            <span>02/2015-5/2017</span>
+          <h2 class="history-header">Work History</h2>
+          <div class="history-table">
+            <div class="table-column border-column">
+              <span class="list-odd list-header">Yrs</span>
+              <span class="list-even">3</span>
+              <span class="list-odd">1</span>
+              <span class="list-even">2</span>
+            </div>
+            <div class="table-column content-column">
+              <span class="list-odd list-header">Company</span>
+              <span class="list-even">Uber</span>
+              <span class="list-odd">Brinks</span>
+              <span class="list-even">United States Navy</span>
+            </div>
+            <div class="table-column content-column">
+              <span class="list-odd list-header">Title</span>
+              <span class="list-even">Driver</span>
+              <span class="list-odd">Armed Security Courier</span>
+              <span class="list-even"
+                >MM(N)3 Nuclear Machinist Mate 3rd Class</span
+              >
+            </div>
+            <div class="table-column content-column">
+              <span class="list-odd list-header">Dates</span>
+              <span class="list-even">11/2015 - Present</span>
+              <span class="list-odd">08/2017 - 09/2018</span>
+              <span class="list-even">02/2015 - 5/2017</span>
+            </div>
           </div>
         </div>
+        <div class = 'contact'>
+          <h2 class= 'contact-header'>Contact Me: </h2>
+          <br>
+          <p>email: jordinkolman@gmail.com</p>
+        </div>
       </div>
-      <footer class='copyright'>
+      <footer class="copyright">
         <p>Copyright Kolman Tech Solutions 2019</p>
       </footer>
     </div>
